reduced serverless function size

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "speechtotext_app",
+  "name": "speechtotextapp",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -38,5 +38,10 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000"
+  "proxy": "http://localhost:5000",
+  "functions":{
+    "public/": {
+      "excludeFiles": "public/**"
+    }
+  }
 }
