--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
   "proxy": "http://localhost:5000",
   "functions":{
     "public/": {
-      "excludeFiles": "public/**"
+      "excludeFiles": "public/"
     }
   }
 }
