--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "node-sass": "4.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
@@ -39,7 +40,7 @@
     ]
   },
   "proxy": "http://localhost:5000",
-  "functions":{
+  "functions": {
     "api/.venv/lib": {
       "excludeFiles": "lib/**"
     }
